# Comfyui_three_js

./: LICENSE  README.md  __init__.py  pyproject.toml  three_view.py  workflow_three.json
.github/workflows/: publish_action.yml
js/: ThreeCanvas.js  index.html  models_default.json  three_view.js
js/assets/: bouchon2.fbx  bouchon2.stl  dog.glb  eva00.glb  eva01.glb  eva02.glb  head.glb  head2.glb  lee.glb  man.glb  woman.glb
js/css/: styles.css
js/lib/: FatLines.js  Files.js  Hub.js  Pool.js  Tools.js  Toon.js  lil-gui.esm.js  three.core.js  uil.module.js  utils.js
js/lib/jsm/controls/: OrbitControls.js
js/lib/jsm/curves/: NURBSCurve.js
js/lib/jsm/loaders/: DRACOLoader.js  EXRLoader.js  FBXLoader.js  GLTFLoader.js  KTX2Loader.js  OBJLoader.js  RGBELoader.js  STLLoader.js
js/lib/jsm/math/: ColorSpaces.js
js/lib/jsm/postprocessing/: EffectComposer.js  Pass.js  RenderPass.js  ShaderPass.js
js/lib/jsm/shaders/: SobelOperatorShader.js
js/lib/jsm/utils/: BufferGeometryUtils.js
workflow/: workflow_three.json
