# pyproject.toml
[project]
name = "Comfyui_three_js" # Unique identifier for your node. Immutable after creation.
description = "use 3d model in comfyui"
version = "0.1.0" # Custom Node version. Must be semantically versioned.
license = { file = "LICENSE.txt" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/lo-th/Comfyui_three_js"

[tool.comfy]
PublisherId = "@lth" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "lo-th" # Display name for the Custom Node. Can be changed later.
Icon = "https://github.com/lo-th/Comfyui_three_js/icon.png" # SVG, PNG, JPG or GIF (MAX. 800x400px)