# pyproject.toml
[project]
name = "comfyui_three_js"
description = "use three.js 3d view in comfyui"
version = "0.2.0"
license = { file = "LICENSE" }
dependencies  = []

[project.urls]
Repository = "https://github.com/lo-th/Comfyui_three_js"

[tool.comfy]
PublisherId = "lth"
DisplayName = "Comfyui_three_js"
Icon = ""