# pyproject.toml
[project]
name = "comfyui_three_js"
description = "Use power of three.js in 3d view on comfyui."
version = "0.2.3"
license = { file = "LICENSE" }
dependencies  = []

[project.urls]
Repository = "https://github.com/lo-th/Comfyui_three_js"

[tool.comfy]
PublisherId = "lth"
DisplayName = "Comfyui_three_js"
Icon = ""